src/core/window-private.h
@@ -253,11 +253,9 @@ struct _MetaWindow
   /* EWHH demands attention flag */
   guint wm_state_demands_attention : 1;
   
-  /* this flag tracks receipt of focus_in focus_out and
-   * determines whether we draw the focus
-   */
+  /* this flag tracks receipt of focus_in focus_out */
   guint has_focus : 1;
-  
+
   /* Have we placed this window? */
   guint placed : 1;
 
@@ -389,6 +387,9 @@ struct _MetaWindow
   MetaGroup *group;
 
   GObject *compositor_private;
+
+  /* Focused window that is (directly or indirectly) attached to this one */
+  MetaWindow *attached_focus_window;
 };
 
 struct _MetaWindowClass
@@ -633,5 +634,8 @@ void meta_window_update_role (MetaWindow *window);
 void meta_window_update_net_wm_type (MetaWindow *window);
 void meta_window_update_monitor (MetaWindow *window);
 void meta_window_update_on_all_workspaces (MetaWindow *window);
+
+void meta_window_propagate_focus_appearance (MetaWindow *window,
+                                             gboolean    focused);
 
 #endif
